--- a/the glitcher/index.html
+++ b/the glitcher/index.html
@@ -19,7 +19,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <div class="version-badge">V1.0 YA DISPONIBLE</div>
+            <div class="version-badge">V1.0 NO DISPONIBLE</div>
             <h1 class="game-title">THE GLITCHER</h1>
             <p class="game-subtitle">Un juego de sigilo y plataformas en pixel art donde la traición y la tecnología se entrelazan en una ciudad cyberpunk corrupta.</p>
             <a href="#story" class="cta-button">Descubre la Historia</a>
